--- a/index.html
+++ b/index.html
@@ -48,26 +48,26 @@
   <div class="span1"></div>
 </div>
 
+<h2>Overview</h2>
+
+<p>The FSharp.Compiler.CodeDom component contains three CodeDom code generators related to F#.</p>
+
+<ul>
+<li><p><em>FSharpCodeProvider</em>. Generates compilable, correct but messy F# code for as many CodeDom constructs as possible. 
+Suitable for generating code that is never read nor edited by humans.</p></li>
+<li><p><em>FSharpCleanCodeProvider</em>.  Generates clean F# code for a smaller subset of CodeDom constructs. 
+Suitable for generating templates of code that may later be edited by humans.</p></li>
+<li><p><em>FSharpAspNetCodeProvider</em>. A legacy provider for quirks associated with earlier versions of ASP.NET code.</p></li>
+</ul>
+
 <h2>Example</h2>
 
-<p>This example demonstrates using a function defined in this sample library.</p>
-
-<table class="pre"><tr><td class="lines"><pre class="fssnip">
-<span class="l">1: </span>
-<span class="l">2: </span>
-</pre>
-</td>
-<td class="snippet"><pre class="fssnip">
-<span class="prep">#r</span> <span class="s">&quot;</span><span class="s">FSharp</span><span class="s">.</span><span class="s">Compiler</span><span class="s">.</span><span class="s">CodeDom</span><span class="s">.</span><span class="s">dll</span><span class="s">&quot;</span>
-<span class="k">open</span> <span onmouseout="hideTip(event, 'fs1', 1)" onmouseover="showTip(event, 'fs1', 1)" class="i">FSharp</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs2', 2)" onmouseover="showTip(event, 'fs2', 2)" class="i">Compiler</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs3', 3)" onmouseover="showTip(event, 'fs3', 3)" class="i">CodeDom</span></pre>
-</td>
-</tr>
-</table>
+<p>Please see the <a href="tutorial.html">tutorial</a>.</p>
 
 <h2>Samples &amp; documentation</h2>
 
 <p>The library comes with comprehensible documentation. 
-It can include a tutorials automatically generated from <code>*.fsx</code> files in <a href="https://github.com/fsprojects/FSharp.ProjectScaffold/tree/master/docs/content">the content folder</a>. 
+It can include a tutorials automatically generated from <code>*.fsx</code> files in <a href="https://github.com/fsprojects/FSharp.Compiler.CodeDom/tree/master/docs/content">the content folder</a>. 
 The API reference is automatically generated from Markdown comments in the library implementation.</p>
 
 <ul>
@@ -79,18 +79,15 @@ functions.</p></li>
 
 <h2>Contributing and copyright</h2>
 
-<p>The project is hosted on <a href="https://github.com/fsprojects/FSharp.ProjectScaffold">GitHub</a> where you can <a href="https://github.com/fsprojects/FSharp.ProjectScaffold/issues">report issues</a>, fork 
+<p>The project is hosted on <a href="https://github.com/fsprojects/FSharp.Compiler.CodeDom">GitHub</a> where you can <a href="https://github.com/fsprojects/FSharp.Compiler.CodeDom/issues">report issues</a>, fork 
 the project and submit pull requests. If you're adding new public API, please also 
-consider adding <a href="https://github.com/fsprojects/FSharp.ProjectScaffold/tree/master/docs/content">samples</a> that can be turned into a documentation. You might
-also want to read <a href="https://github.com/fsprojects/FSharp.ProjectScaffold/blob/master/README.md">library design notes</a> to understand how it works.</p>
+consider adding <a href="https://github.com/fsprojects/FSharp.Compiler.CodeDom/tree/master/docs/content">samples</a> that can be turned into a documentation. You might
+also want to read <a href="https://github.com/fsprojects/FSharp.Compiler.CodeDom/blob/master/README.md">library design notes</a> to understand how it works.</p>
 
 <p>The library is available under Public Domain license, which allows modification and 
 redistribution for both commercial and non-commercial purposes. For more information see the 
-<a href="https://github.com/fsprojects/FSharp.ProjectScaffold/blob/master/LICENSE.txt">License file</a> in the GitHub repository.</p>
+<a href="https://github.com/fsprojects/FSharp.Compiler.CodeDom/blob/master/LICENSE.txt">License file</a> in the GitHub repository.</p>
 
-<div class="tip" id="fs1">namespace FSharp</div>
-<div class="tip" id="fs2">namespace FSharp.Compiler</div>
-<div class="tip" id="fs3">namespace FSharp.Compiler.CodeDom</div>
 
         </div>
         <div class="span3">
