Update generated documentation for version 0.9.1

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <div class="span1"></div>
   <div class="span6">
     <div class="well well-small" id="nuget">
-      The F# Compiler CodeDom tool can be <a href="https://nuget.org/packages/FSharp.ProjectTemplate">installed from NuGet</a>:
+      The F# Compiler CodeDom tool can be <a href="https://www.nuget.org/packages/FSharp.Compiler.CodeDom/">installed from NuGet</a>:
       <pre>PM> Install-Package FSharp.Compiler.CodeDom</pre>
     </div>
   </div>
