--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <title>F# Compiler CodeDom Implementations
+    <title>FSharp.Compiler.CodeDom
 </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="description" content="A limited CodeDom implemenation for F#"/>
+    <meta name="description" content="A limited CodeDom implementation for F#"/>
     <meta name="author" content="F# Software Foundation, Microsoft"/>
 
     <script src="https://code.jquery.com/jquery-1.8.0.js"></script>
@@ -17,7 +17,7 @@
     <script type="text/javascript" src="/FSharp.Compiler.CodeDom/content/tips.js"></script>
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
-      <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <![endif]-->
   </head>
   <body>
@@ -33,59 +33,52 @@
       <div class="row">
         <div class="span9" id="main">
           
-<h1>F# Compiler CodeDom Implementations</h1>
-
+<h1><a name="FSharp-Compiler-CodeDom" class="anchor" href="#FSharp-Compiler-CodeDom">FSharp.Compiler.CodeDom</a></h1>
 <p>Documentation</p>
-
 <div class="row">
   <div class="span1"></div>
   <div class="span6">
     <div class="well well-small" id="nuget">
-      The F# Compiler CodeDom tool can be <a href="https://www.nuget.org/packages/FSharp.Compiler.CodeDom/">installed from NuGet</a>:
+      The FSharp.Compiler.CodeDom library can be <a href="https://nuget.org/packages/FSharp.Compiler.CodeDom">installed from NuGet</a>:
       <pre>PM> Install-Package FSharp.Compiler.CodeDom</pre>
     </div>
   </div>
   <div class="span1"></div>
 </div>
-
-<h2>Overview</h2>
-
+<h2><a name="Overview" class="anchor" href="#Overview">Overview</a></h2>
 <p>The FSharp.Compiler.CodeDom component contains three CodeDom code generators related to F#.</p>
-
 <ul>
-<li><p><em>FSharpCodeProvider</em>. Generates compilable, correct but messy F# code for as many CodeDom constructs as possible. 
-Suitable for generating code that is never read nor edited by humans.</p></li>
-<li><p><em>FSharpCleanCodeProvider</em>.  Generates clean F# code for a smaller subset of CodeDom constructs. 
-Suitable for generating templates of code that may later be edited by humans.</p></li>
+<li>
+<p><em>FSharpCodeProvider</em>. Generates compilable, correct but messy F# code for as many CodeDom constructs as possible.
+Suitable for generating code that is never read nor edited by humans.</p>
+</li>
+<li>
+<p><em>FSharpCleanCodeProvider</em>.  Generates clean F# code for a smaller subset of CodeDom constructs.
+Suitable for generating templates of code that may later be edited by humans.</p>
+</li>
 <li><p><em>FSharpAspNetCodeProvider</em>. A legacy provider for quirks associated with earlier versions of ASP.NET code.</p></li>
 </ul>
-
-<h2>Example</h2>
-
+<h2><a name="Example" class="anchor" href="#Example">Example</a></h2>
 <p>Please see the <a href="tutorial.html">tutorial</a>.</p>
-
-<h2>Samples &amp; documentation</h2>
-
-<p>The library comes with comprehensible documentation. 
-It can include a tutorials automatically generated from <code>*.fsx</code> files in <a href="https://github.com/fsprojects/FSharp.Compiler.CodeDom/tree/master/docs/content">the content folder</a>. 
+<h2><a name="Samples-amp-documentation" class="anchor" href="#Samples-amp-documentation">Samples &amp; documentation</a></h2>
+<p>The library comes with comprehensible documentation.
+It can include tutorials automatically generated from <code>*.fsx</code> files in <a href="https://github.com/fsprojects/FSharp.Compiler.CodeDom/tree/master/docs/content">the content folder</a>.
 The API reference is automatically generated from Markdown comments in the library implementation.</p>
-
 <ul>
 <li><p><a href="tutorial.html">Tutorial</a> contains a further explanation of this sample library.</p></li>
-<li><p><a href="reference/index.html">API Reference</a> contains automatically generated documentation for all types, modules
+<li>
+<p><a href="reference/index.html">API Reference</a> contains automatically generated documentation for all types, modules
 and functions in the library. This includes additional brief samples on using most of the
-functions.</p></li>
+functions.</p>
+</li>
 </ul>
-
-<h2>Contributing and copyright</h2>
-
-<p>The project is hosted on <a href="https://github.com/fsprojects/FSharp.Compiler.CodeDom">GitHub</a> where you can <a href="https://github.com/fsprojects/FSharp.Compiler.CodeDom/issues">report issues</a>, fork 
-the project and submit pull requests. If you're adding new public API, please also 
+<h2><a name="Contributing-and-copyright" class="anchor" href="#Contributing-and-copyright">Contributing and copyright</a></h2>
+<p>The project is hosted on <a href="https://github.com/fsprojects/FSharp.Compiler.CodeDom">GitHub</a> where you can <a href="https://github.com/fsprojects/FSharp.Compiler.CodeDom/issues">report issues</a>, fork
+the project and submit pull requests. If you're adding a new public API, please also
 consider adding <a href="https://github.com/fsprojects/FSharp.Compiler.CodeDom/tree/master/docs/content">samples</a> that can be turned into a documentation. You might
-also want to read <a href="https://github.com/fsprojects/FSharp.Compiler.CodeDom/blob/master/README.md">library design notes</a> to understand how it works.</p>
-
-<p>The library is available under Public Domain license, which allows modification and 
-redistribution for both commercial and non-commercial purposes. For more information see the 
+also want to read the <a href="https://github.com/fsprojects/FSharp.Compiler.CodeDom/blob/master/README.md">library design notes</a> to understand how it works.</p>
+<p>The library is available under Public Domain license, which allows modification and
+redistribution for both commercial and non-commercial purposes. For more information see the
 <a href="https://github.com/fsprojects/FSharp.Compiler.CodeDom/blob/master/LICENSE.txt">License file</a> in the GitHub repository.</p>
 
 
