--- a/release-notes.html
+++ b/release-notes.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <title>Namespaces - FSharp.Compiler.CodeDom</title>
+    <title>release-notes</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="description" content=""/>
+    <meta name="description" content="A limited CodeDom implementation for F#"/>
     <meta name="author" content="F# Software Foundation, Microsoft"/>
 
     <script src="https://code.jquery.com/jquery-1.8.0.js"></script>
@@ -32,9 +32,56 @@
       <div class="row">
         <div class="span9" id="main">
           
-
-<h1>FSharp.Compiler.CodeDom</h1>
-
+<h4><a name="1-0-0-1-March-28-2016" class="anchor" href="#1-0-0-1-March-28-2016">1.0.0.1 - March 28 2016</a></h4>
+<ul>
+<li>
+Full support for system-wide installation on Mono.  As on Windows, this allows
+for "soft-referencing" FSCC via Compiler.CodeDomProvider.CreateProvider,
+enabling any CodeDom-based program to generate F# code (apart from
+poorly-written programs which hard-code the list of providers they support).
+Invoking the compiler via CodeDom now also works.
+</li>
+<li>The MSI installer now supports upgrades.</li>
+<li>
+The build system has been updated to mirror the most recent ProjectScaffold.
+IDE builds should still work, but it is recommended to run "build Debug" or
+"build Release" instead (or "build BuildPackage" to generate a NuGet package).
+</li>
+<li>
+Source code is now available during debugging or upon jumping to a symbol's
+definition, courtesy of SourceLink.
+</li>
+</ul>
+<h4><a name="0-9-4-January-18-2016" class="anchor" href="#0-9-4-January-18-2016">0.9.4 - January 18 2016</a></h4>
+<ul>
+<li>
+Change MSI installer to also install the provider assembly to the Program
+Files directory and add an AssemblyFolders registry key so that the provider
+will show up in the VS "add reference" window
+</li>
+<li>Escape reserved F# name/keyword identifiers</li>
+<li>
+Change CreateEscapedIdentifier and CreateValidIdentifier to behave in
+accordance with CodeDom recommendations
+</li>
+</ul>
+<h4><a name="0-9-3-September-18-2015" class="anchor" href="#0-9-3-September-18-2015">0.9.3 - September 18 2015</a></h4>
+<ul>
+<li>Add ability to specify path to fsc via FSHARPINSTALLPATH env variable</li>
+</ul>
+<h4><a name="0-9-2-March-23-2015" class="anchor" href="#0-9-2-March-23-2015">0.9.2 - March 23 2015</a></h4>
+<ul>
+<li>Update FSharp.Core version to 4.3.1.0, this helps in situations where assembly redirects cannot be applied, and most people are using F# 3.1.x</li>
+</ul>
+<h4><a name="0-9-1-September-9-2014" class="anchor" href="#0-9-1-September-9-2014">0.9.1 - September 9 2014</a></h4>
+<ul>
+<li>Add clean code generator from <a href="https://github.com/fsharp/fsharpbinding/tree/master/monodevelop/MonoDevelop.FSharpBinding/PowerPack">https://github.com/fsharp/fsharpbinding/tree/master/monodevelop/MonoDevelop.FSharpBinding/PowerPack</a></li>
+</ul>
+<h4><a name="0-9-0-September-9-2014" class="anchor" href="#0-9-0-September-9-2014">0.9.0 - September 9 2014</a></h4>
+<ul>
+<li>Initial import of code from fsharppowerpack.codeplex.com libs\Dec2012\src</li>
+<li>Adjust namespace names</li>
+</ul>
 
 
         </div>
